- ::donate command added - updated netty networking to better handle jvm overflows - added revenant drop rate booster scrolls